--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Project2</string>
-    <string name="appTitle">SOCKET</string>
+    <string name="appTitle">STOCKET</string>
     <string name="password">Password:</string>
     <string name="logo">Stocket logo</string>
     <string name="username">Username:</string>
