--- a/App/src/main/res/values/strings.xml
+++ b/App/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="Submit">Submit</string>
     <string name="allow_camera_access">Allow Camera Access?</string>
     <string name="barcode_scanner">Barcode Scanner</string>
+    <string name="submit">Submit</string>
 </resources>
